add nav and header

--- a/index.html
+++ b/index.html
@@ -19,8 +19,44 @@
 </head>
 
 <body>
-    <h1>Laudantium iure quisquam perferendis aliquid ea qui ullam nihil recusandae sapiente optio minima aliquam praesentium odio</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum voluptate ea doloremque cum, ex sequi mollitia perspiciatis fuga laboriosam repellendus fugit ducimus itaque sunt autem molestiae facere sapiente magnam animi.</p>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand href="#">JobRobin</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                <a class="nav-link" href="#">CANDIDATE</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">EMPLOYER</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">LOG IN</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">SIGN UP</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header class="candidate-header">
+        <div class="container h-100">
+            <div class="row h-100">
+            <div class="col my-auto">
+                <div class="mx-auto">
+                <h1 class="mb-5">Find the right fit data science <br> job for you</h1>
+                <a href="#" class="btn btn-gold btn-xl">Sign up</a>
+                </div>
+            </div>
+            </div>
+        </div>
+    </header>
 
     <!-- Bootstrap main js -->
     <script src="assets/js/jquery.min.js"></script>
