--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav id="mainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand href="#">JobRobin</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="#">CANDIDATE</a>
+                <a class="nav-link" href="#">Candidate</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">EMPLOYER</a>
+                <a class="nav-link" href="#">Employer</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">LOG IN</a>
+                <a id="login" class="nav-link" href="#">Log in</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">SIGN UP</a>
+                <a id="signup" class="nav-link" href="#">Sign up</a>
                 </li>
             </ul>
             </div>
