--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand href="#">JobRobin</a>
+            <a class="navbar-brand href="#">
+                <img src="assets/media/images/jobrobin_logo.png" alt="">
+            </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,8 +51,8 @@
         <div class="container h-100">
             <div class="row h-100">
             <div class="col my-auto">
-                <div class="mx-auto">
-                <h1 class="mb-5">Find the right fit data science <br> job for you</h1>
+                <div class="candidate-header-content">
+                <h1 class="mb-5">Find the right fit data science job for you</h1>
                 <a href="#" class="btn btn-gold btn-xl">Sign up</a>
                 </div>
             </div>
