candidate home page 80% done

--- a/index.html
+++ b/index.html
@@ -1,71 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>JobRobin - Candidate</title>
+  <title>JobRobin - Candidate</title>
 
-    <!-- Bootstrap main js -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <!-- Bootstrap main js -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
-    <!-- Typography style template -->
-    <link rel="stylesheet" href="assets/css/jr-fonts.css">
+  <!-- Typography style template -->
+  <link rel="stylesheet" href="assets/css/jr-fonts.css">
 
-    <!-- Custom css style template -->
-    <link rel="stylesheet" href="assets/css/jr-style.css">
+  <!-- Custom css style template -->
+  <link rel="stylesheet" href="assets/css/jr-style.css">
 
 </head>
 
 <body>
-    <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand href="#">
-                <img src="assets/media/images/jobrobin_logo.png" alt="">
+            <a class="navbar-brand" href="#">
+                <img src="assets/media/images/jobrobin_logo.png" alt=" ">
             </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="#">Candidate</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Employer</a>
-                </li>
-                <li class="nav-item">
-                <a id="login" class="nav-link" href="#">Log in</a>
-                </li>
-                <li class="nav-item">
-                <a id="signup" class="nav-link" href="#">Sign up</a>
-                </li>
-            </ul>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link " href="# ">Candidate</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="# ">Employer</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link login " href="# ">Log in</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link signup " href="# ">Sign up</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
 
-    <header class="candidate-header">
-        <div class="container h-100">
-            <div class="row h-100">
-            <div class="col my-auto">
-                <div class="candidate-header-content">
-                <h1 class="mb-5">Find the right fit data science job for you</h1>
-                <a href="#" class="btn btn-gold btn-xl">Sign up</a>
-                </div>
-            </div>
+    <header class="candidate-header ">
+    <div class="container h-100 ">
+        <div class="row h-100 ">
+        <div class="col my-auto ">
+            <div class="candidate-header-content ">
+            <h1 class="mb-5 ">Find the right fit data science job for you</h1>
+            <a href="# " class="btn btn-gold btn-xl ">Sign up</a>
             </div>
         </div>
+        </div>
+    </div>
     </header>
 
-    <!-- Bootstrap main js -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <section class="role ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-12 col-lg-6 my-auto">
+                    <p class="text-header ">Find the perfect role by matching on fit, goals & experience</p>
+                    <p class="font-weight-normal text-left">JobRobin uses AI and Human I to identify the companies and roles that are more than simply a skills match. We believe
+                    that even slightly improved job choices can have a compound effect on your career.</p>
+                </div>
+                <div class="col-sm-12 col-lg-6 ">
+                    <div class="container ">
+                        <img class="img-fluid " src="assets/media/images/role-chart.png ">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <!-- Custom js script -->
-    <script src="assets/js/jr-script.js"></script>
+    <section class="feedback ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-12 col-lg-6 ">
+                    <div class="container ">
+                        <img class="img-fluid " src="assets/media/images/feedback.png ">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-6 my-auto ">
+                    <p class="text-header text-right pt-4">We give you real Feedback</p>
+                    <p class="font-weight-normal text-right pb-5">Ever wonder why you didn’t get a reply or an offer for a role you seemed perfect for? If we think you’re a fit
+                    for a role, we guarantee you feedback so you can improve…or avoid the next one.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="profile ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-12 col-lg-6 my-auto">
+                    <p class="text-header ">The last profile you’ll fill out</p>
+                    <p class="font-weight-normal text-left">We’re not here to just help you get your next job. We’re here to help you make all of your future career decisions.
+                    JobRobin grows with you learning about you even after you get hired so that you understand your options.</p>
+                    <a class="btn btn-md btn-turquoise " href="#">Learn more</a>
+                </div>
+                <div class="col-sm-12 col-lg-6 ">
+                    <div class="container ">
+                        <img class="img-fluid " src="assets/media/images/resume-img.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="globe ">
+        <div class="container ">
+            <div class="row globe-row1">
+                <div class="col-sm-12 col-lg-4 ">
+                    <div class="container ">
+                        <img class="img-fluid " src="assets/media/images/data-globe.png ">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-7 my-auto ml-auto">
+                    <p class="text-header text-right pt-4">We match your profile to the right opportunities in Data Science</p>
+                    <p class="font-weight-normal text-right">JobRobin makes direct introductions to its employer partners who are building data teams to solve interesting problems. Our employer partners work across industries including tech.</p>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="globe-footer">
+                    <p class="text-header">Under JobRobin’s wings, you’ll wing big…. No, that’s lame, but seriously. 
+                    </p>
+                    <a class="btn btn-md btn-gold" href="#">Sign up</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+            <div class="container ">
+                <div class="row mt-5">
+                    <div class="footer-header mx-auto">
+                        <img src="assets/media/images/jobrobin_logo.png" alt=" ">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-4 ">
+                        <p>Contact Us</p>
+                        <p>info@jobrobin.com</p>
+                        <p>200 Broadway, New York, NY  10038</p>
+                    </div>
+                    <div class="col-sm-12 col-lg-4 my-auto ml-auto">
+                            <p>About Us</p>
+                            <p>FAQ</p>
+                            <p>We're hiring!</p>
+                    </div>
+                    <div class="col-sm-12 col-lg-4 text-right">
+                        <p>Follow us</p>
+                        <small>GIT | TWITTER | LINKEDIN | FACEBOOK </small>
+                    </div>
+                </div>
+                <div class="row">
+                        <small class="mx-auto mb-3">© JobRobin, Inc. 2017</small>
+                </div>
+            </div>
+        </footer>
+
+  <!-- Bootstrap main js -->
+  <script src="assets/js/jquery.min.js "></script>
+  <script src="assets/js/popper.min.js "></script>
+  <script src="assets/js/bootstrap.min.js "></script>
+
+  <!-- Custom js script -->
+  <script src="assets/js/jr-script.js "></script>
 </body>
+
 </html>
