--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav id="mainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/media/images/jobrobin_logo.png" alt=" ">
+                <img src="assets/media/images/jobrobin_logo.png" alt=" " id="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -42,27 +42,27 @@
                         <a class="nav-link login " href="# ">Log in</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link signup " href="# ">Sign up</a>
+                        <a class="btn btn-md btn-gold" href="# ">Sign up</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <header class="candidate-header ">
-    <div class="container h-100 ">
+    <header class="candidate-header" id="home">
+    <div class="container h-100 " id="header">
         <div class="row h-100 ">
         <div class="col my-auto ">
             <div class="candidate-header-content ">
             <h1 class="mb-5 ">Find the right fit data science job for you</h1>
-            <a href="# " class="btn btn-gold btn-xl ">Sign up</a>
+            <a href="# " class="btn btn-gold btn-lg ">Sign up</a>
             </div>
         </div>
         </div>
     </div>
     </header>
 
-    <section class="role ">
+    <section class="role " id="role">
         <div class="container ">
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 my-auto">
@@ -79,7 +79,7 @@
         </div>
     </section>
 
-    <section class="feedback ">
+    <section class="feedback" id="feedback">
         <div class="container ">
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 ">
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <section class="profile ">
+    <section class="profile " id="profile">
         <div class="container ">
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 my-auto">
@@ -114,7 +114,7 @@
         </div>
     </section>
 
-    <section class="globe ">
+    <section class="globe " id="globe">
         <div class="container ">
             <div class="row globe-row1">
                 <div class="col-sm-12 col-lg-4 ">
