fixed nav add social icons

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </nav>
 
     <header class="candidate-header" id="home">
+    <div id="belowHome">lorem</div>
     <div class="container h-100 " id="header">
         <div class="row h-100 ">
         <div class="col my-auto ">
@@ -145,23 +146,27 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 col-lg-4 ">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
                         <p>Contact Us</p>
                         <p>info@jobrobin.com</p>
                         <p>200 Broadway, New York, NY  10038</p>
                     </div>
-                    <div class="col-sm-12 col-lg-4 my-auto ml-auto">
+                    <div class="col-sm-12 col-md-6 col-lg-4 my-auto text-md-right">
                             <p>About Us</p>
                             <p>FAQ</p>
                             <p>We're hiring!</p>
                     </div>
-                    <div class="col-sm-12 col-lg-4 text-right">
-                        <p>Follow us</p>
-                        <small>GIT | TWITTER | LINKEDIN | FACEBOOK </small>
+                    <div class="col-sm-12 col-lg-4">
+                        <ul class="social-inline">
+                            <li><a href="#"><img src="assets/media/images/share.png"></a></li>
+                            <li><a href="#"><img src="assets/media/images/twitter.png"></a></li>
+                            <li><a href="#"><img src="assets/media/images/linkein.png"></a></li>
+                            <li><a href="#"><img src="assets/media/images/facebook.png"></a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="row">
-                        <small class="mx-auto mb-3">© JobRobin, Inc. 2017</small>
+                        <small class="mx-auto mt-5 mb-2">© JobRobin, Inc. 2017</small>
                 </div>
             </div>
         </footer>
