fixed about footer alignment

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <p>info@jobrobin.com</p>
                         <p>200 Broadway, New York, NY  10038</p>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-4 my-auto text-md-right">
+                    <div class="col-sm-12 col-md-6 col-lg-4 my-auto text-md-right text-lg-center">
                             <p>About Us</p>
                             <p>FAQ</p>
                             <p>We're hiring!</p>
