add employer page

--- a/home_cand_mdr.html
+++ b/home_cand_mdr.html
@@ -49,9 +49,9 @@
         </div>
     </nav>
 
-    <header class="candidate-header" id="home">
-    <div id="belowHome">lorem</div>
-    <div class="container h-100 " id="header">
+    <header class="candidate-header" id="header">
+    <div id="belowHeader">lorem</div>
+    <div class="container h-100 ">
         <div class="row h-100 ">
         <div class="col my-auto ">
             <div class="candidate-header-content ">
@@ -177,7 +177,7 @@
   <script src="assets/js/bootstrap.min.js "></script>
 
   <!-- Custom js script -->
-  <script src="assets/js/jr-script.js "></script>
+  <script src="assets/js/jr-script-cand.js "></script>
 </body>
 
 </html>
