add link for candidate and employer page

--- a/home_cand_mdr.html
+++ b/home_cand_mdr.html
@@ -33,10 +33,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="# ">Candidate</a>
+                        <a class="nav-link " href="home_cand_mdr.html ">Candidate</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="# ">Employer</a>
+                        <a class="nav-link " href="home_emp_mdr.html ">Employer</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link login " href="# ">Log in</a>
