--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="home_cand_mdr.html ">Candidate</a>
+                        <a class="nav-link " href="index.html ">Candidate</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link " href="home_emp_mdr.html ">Employer</a>
