revise text candidate page

--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -127,10 +127,12 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="globe-footer">
-                    <p class="text-header">Under JobRobin’s wings, you’ll wing big…. No, that’s lame, but seriously. 
-                    </p>
-                    <a class="btn btn-md btn-gold" href="#">Sign up</a>
+                <div class="container">
+                    <div class="globe-footer">
+                        <p class="text-header">Under JobRobin’s wings, you’ll wing big…. No, that’s lame, but seriously. 
+                        </p>
+                        <a class="btn btn-md btn-gold" href="#">Sign up</a>
+                    </div>
                 </div>
             </div>
         </div>
