--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 my-auto">
                     <p class="text-header ">Find the perfect role by matching on fit, goals & experience</p>
-                    <p class="font-weight-normal text-left">JobRobin uses AI and Human I to identify the companies and roles that are more than simply a skills match. We believe
-                    that even slightly improved job choices can have a compound effect on your career.</p>
+                    <p class="font-weight-normal text-left">JobRobin uses algorithmic and human intelligence to identify the companies and roles that are more than simply a skills match. We not only consider where you are today, but where you want to be in the future.</p>
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
@@ -89,9 +88,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 my-auto ">
-                    <p class="text-header text-right pt-4">We give you real Feedback</p>
-                    <p class="font-weight-normal text-right pb-5">Ever wonder why you didn’t get a reply or an offer for a role you seemed perfect for? If we think you’re a fit
-                    for a role, we guarantee you feedback so you can improve…or avoid the next one.</p>
+                    <p class="text-header text-right pt-4">We give you real feedback</p>
+                    <p class="font-weight-normal text-right pb-5">Ever wonder why you didn’t get an offer or interview for a role you seemed perfect for? If we think you’re a fit for a role, we guarantee you feedback so you can improve your chances going forward.</p>
                 </div>
             </div>
         </div>
@@ -129,10 +127,12 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="globe-footer">
-                    <p class="text-header">Under JobRobin’s wings, you’ll wing big…. No, that’s lame, but seriously. 
-                    </p>
-                    <a class="btn btn-md btn-gold" href="#">Sign up</a>
+                <div class="container">
+                    <div class="globe-footer">
+                        <p class="text-header">Under JobRobin’s wings, you’ll wing big…. No, that’s lame, but seriously. 
+                        </p>
+                        <a class="btn btn-md btn-gold" href="#">Sign up</a>
+                    </div>
                 </div>
             </div>
         </div>
