employer navbar background fixed orange section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
 
     <header class="candidate-header" id="header">
-    <div id="belowHeader">lorem</div>
+    <div id="belowHeader"></div>
     <div class="container h-100 ">
         <div class="row h-100 ">
         <div class="col my-auto ">
