add images employer sections

--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -55,7 +55,7 @@
                 <div class="row h-100 ">
                 <div class="col my-auto ">
                     <div class="employer-header-content ">
-                    <h1 class="mb-5 ">Find the right fit data scientist for your team</h1>
+                    <h1 class="mb-5 ">Hire talented data professionals efficiently</h1>
                     <a href="# " class="btn btn-gold btn-lg ">Start hiring</a>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
-                        <img class="img-fluid " src="http://via.placeholder.com/350x200 ">
+                        <img class="img-fluid " src="assets/media/images/finding_img.png">
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
-                        <img class="img-fluid " src="http://via.placeholder.com/350x200 ">
+                        <img class="img-fluid " src="assets/media/images/assessment-img.png">
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 my-auto ">
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
-                        <img class="img-fluid " src="http://via.placeholder.com/350x200 ">
+                        <img class="img-fluid " src="assets/media/images/pricing-img.png ">
                     </div>
                 </div>
             </div>
@@ -115,15 +115,10 @@
     <section class="why-work" id="whywork">
         <div class="container ">
             <div class="row globe-row1">
-                <div class="col-sm-12 col-lg-6 ">
-                    <div class="container ">
-                        <img class="img-fluid " src="http://via.placeholder.com/350x200 ">
-                    </div>
-                </div>
-                <div class="col-sm-12 col-lg-6 my-auto ml-auto">
-                    <p class="text-header text-right pt-4">Why work with JobRobin</p>
-                    <p class="font-weight-normal text-right">We experienced firsthand the benefits of high quality recruiting, but were unsatisfied with the cost and consistency.  So, we struck out to build a more efficient, sustainable solution and put the same quality service in reach of organizations large and small.  We leverage data to the benefit of data people.</p>
-                    <p class="font-weight-normal text-right">Not to mention, 10% of our profits go to supporting underprivileged youth getting real world exposure to STEM careers.</p>
+                <div class="col-sm-12 my-auto text-center">
+                    <p class="text-header pt-4">Why work with JobRobin</p>
+                    <p class="font-weight-normal">We experienced firsthand the benefits of high quality recruiting, but were unsatisfied with the cost and consistency.  So, we struck out to build a more efficient, sustainable solution and put the same quality service in reach of organizations large and small.  We leverage data to the benefit of data people.</p>
+                    <p class="font-weight-normal">Not to mention, 10% of our profits go to supporting underprivileged youth getting real world exposure to STEM careers.</p>
                 </div>
             </div>
             <div class="row mt-5">
