add styles footer

--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -142,14 +142,14 @@
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <p>Contact Us</p>
+                    <p class="footer-text-header">Contact Us</p>
                     <p>info@jobrobin.com</p>
                     <p>200 Broadway, New York, NY  10038</p>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 my-auto text-md-right text-lg-center">
-                        <p>About Us</p>
-                        <p>FAQ</p>
-                        <p>We're hiring!</p>
+                    <p class="footer-text-header">About Us</p>
+                    <p>FAQ</p>
+                    <p>We're hiring!</p>
                 </div>
                 <div class="col-sm-12 col-lg-4">
                     <ul class="social-inline">
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div class="row">
-                    <small class="mx-auto mt-5 mb-2">© JobRobin, Inc. 2017</small>
+                    <small class="mx-auto mt-5 mb-2 copyright">© JobRobin, Inc. 2017</small>
             </div>
         </div>
     </footer>
