employer page. header height, footer 2nd p remove, section 2 update img

--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -88,8 +88,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6 my-auto ">
-                    <p class="text-header text-right pt-4">Complex roles requires a new assessment process</p>
-                    <p class="font-weight-normal text-right pb-5">JobRobin uses a specialized candidate assessment process developed by data team and business executives from successful startups, IBM, Google, and others. Our process was informed by over 100 hiring managers & HR leads similar to you.</p>
+                    <p class="text-header pt-4">Complex roles requires a new assessment process</p>
+                    <p class="font-weight-normal pb-5">JobRobin uses a specialized candidate assessment process developed by data team and business executives from successful startups, IBM, Google, and others. Our process was informed by over 100 hiring managers & HR leads similar to you.</p>
                 </div>
             </div>
         </div>
@@ -121,13 +121,9 @@
                     <p class="font-weight-normal">Not to mention, 10% of our profits go to supporting underprivileged youth getting real world exposure to STEM careers.</p>
                 </div>
             </div>
-            <div class="row mt-5">
-                <div class="container">
-                    <div class="globe-footer">
-                        <p class="text-header">Under JobRobin’s wings, you’ll wing big…. No, that’s lame, but seriously. 
-                        </p>
+            <div class="row">
+                <div class="container text-center">
                         <a class="btn btn-md btn-gold" href="#">Sign up</a>
-                    </div>
                 </div>
             </div>
         </div>
