update text employer page

--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -68,7 +68,7 @@
             <div class="row ">
                 <div class="col-sm-12 col-lg-6 my-auto ">
                     <p class="text-header pt-4">Difficult finding candidates with the right combination of technical, business and communication skills?</p>
-                    <p class="font-weight-normal pb-5">JobRobin works with you to understand this blend, applies a rigorous candidate evaluation method evaluation to under, and then only refers candidates to you who are both interested in your company and can hit the ground running.</p>
+                    <p class="font-weight-normal pb-5">JobRobin works with you to understand this blend, applies a rigorous candidate evaluation method using both human and algorithmic input, and then only refers candidates to you who are both interested and can hit the ground running.</p>
                 </div>
                 <div class="col-sm-12 col-lg-6 ">
                     <div class="container ">
@@ -117,8 +117,8 @@
             <div class="row globe-row1">
                 <div class="col-sm-12 my-auto text-center">
                     <p class="text-header pt-4">Why work with JobRobin</p>
-                    <p class="font-weight-normal">We experienced firsthand the benefits of high quality recruiting, but were unsatisfied with the cost and consistency.  So, we struck out to build a more efficient, sustainable solution and put the same quality service in reach of organizations large and small.  We leverage data to the benefit of data people.</p>
-                    <p class="font-weight-normal">Not to mention, 10% of our profits go to supporting underprivileged youth getting real world exposure to STEM careers.</p>
+                    <p class="font-weight-normal">We were unsatisfied with the cost of recruiters, the low success rate of job boards, and the ineffective of using resumes to screen candidates, so we decided to build a better, affordable solution.</p>
+                    <p class="font-weight-normal">In our commitment to helping people find fulfilling work, 5% of our profits go toward supporting underpriviledged youth getting real world exposure to STEM careers. Ask how you can participate.</p>
                 </div>
             </div>
             <div class="row">
