--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -117,7 +117,7 @@
             <div class="row globe-row1">
                 <div class="col-sm-12 my-auto text-center">
                     <p class="text-header pt-4">Why work with JobRobin</p>
-                    <p class="font-weight-normal">We were unsatisfied with the cost of recruiters, the low success rate of job boards, and the ineffective of using resumes to screen candidates, so we decided to build a better, affordable solution.</p>
+                    <p class="font-weight-normal">We were unsatisfied with the high cost of recruiters, the low success rate of job boards, and the ineffective of using resumes to screen candidates, so we decided to build a better, affordable solution.</p>
                     <p class="font-weight-normal">In our commitment to helping people find fulfilling work, 5% of our profits go toward supporting underpriviledged youth getting real world exposure to STEM careers. Ask how you can participate.</p>
                 </div>
             </div>
