--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="row">
                 <div class="container">
                     <div class="container text-center">
-                        <a class="btn btn-md btn-gold" href="#">Sign up</a>
+                        <a class="btn btn-lg btn-gold" href="#">Sign up</a>
                     </div>
                 </div>
             </div>
