--- a/home_emp_mdr.html
+++ b/home_emp_mdr.html
@@ -123,7 +123,7 @@
             </div>
             <div class="row">
                 <div class="container text-center">
-                        <a class="btn btn-md btn-gold" href="#">Sign up</a>
+                        <a class="btn btn-lg btn-gold" href="#">Sign up</a>
                 </div>
             </div>
         </div>
